# compspace

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/getting_started/: index.rst  installation.rst
docs/source/user_guide/: 2d_plots.ipynb  3d_plots.ipynb  convenience.ipynb  index.rst
example_data/: comp_example.csv
src/compspace/: __init__.py
src/simplices/: __init__.py  axes_2d.py  axes_2d_containers.py  axes_2d_helpers.py
